--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Express Delivery</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <div class="mainBody">
+        <ul class="hdr">
+            <li class="logo"> EXPRESS DELIVERY </li>
+            <li class="info"> info@express.com</li>
+            <li class="info"> 0529683903</li>
+        </ul>
 
+        <div class="nav">
+            <ul>
+
+            </ul>
+        </div>
+
+    </div>
+</body>
+</html>
