--- a/services.html
+++ b/services.html
@@ -3,9 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
+    <link rel="stylesheet" href="servicesStyle.css" />
 </head>
-<body>
-    
+<body class="body">
+<h1 class="services">EXPRESS DELIVARY COMPANY SERVICES</h1><br><br>
+
+<ul class="container" style="list-style-type: none">
+  <li><img  src="cc.jpg" alt="Delivary" ></li>
+  <li><h2 class="h2"> You deserve a great delivery experience!<br> You want your favorite products delivered to you fast, with safe shipping and no hassles.
+  </h2></li>
+</ul>
+
+<p class="p">We help you take your order in the easiest way. Whether we’re delivering your meal kits to help you quickly prepare dinner, 
+  or helping you avoid a last-minute trip to the store,
+   our goal is to give you more time for what’s important by delivering your favorite products to you — fast.<br></p>
+<p class="titlePrice">The price of delivary</p>
+ <div class="container">
+ <table class="table1" border="1">
+        <tr>
+          <th class="th">Weight of package<br>(inclusive)</th>
+          <th>Price</th>
+        </tr>
+        <tr>
+          <td>up to 10 kg</td>
+          <td>15$</td>
+        </tr>
+        <tr>
+            <td>up to 20 kg</td>
+            <td>30$</td>
+          </tr>
+          <tr>
+            <td>up to 30 kg</td>
+            <td>45$</td>
+          </tr>
+          <tr>
+            <td>up to 40 kg</td>
+            <td>60$</td>
+          </tr>
+          <tr>
+            <td>up to 50 kg</td>
+            <td>75$</td>
+          </tr>
+          <tr>
+            <td>up to 60 kg</td>
+            <td>90$</td>
+          </tr>
+          <tr>
+            <td>up to 70 kg</td>
+            <td>105$</td>
+          </tr>
+          <tr>
+            <td>up to 80 kg</td>
+            <td>120$</td>
+          </tr>
+          <tr>
+            <td>up to 90 kg</td>
+            <td>135$</td>
+          </tr>
+          <tr>
+            <td>up to 100 kg</td>
+            <td>150$</td>
+          </tr>
+          <tr>
+            <td>100+ kg</td>
+            <td>165$</td>
+          </tr>      
+      </table> 
+      <table class="table2" border="1" >
+        <tr>
+          <th>Region</th>
+          <th>Price</th>
+        </tr>
+        <tr>
+          <td>North</td>
+          <td>5$</td>
+        </tr>
+        <tr>
+            <td>Center</td>
+            <td>Free</td>
+          </tr>
+          <tr>
+            <td>North</td>
+            <td>7$</td>
+          </tr>
+          </table>
+        </div>
+        <br><br>
+        <div style="text-align:center">
+          <p class="line1"> Deliver in one week </p>
+          <p class="line2">Total price of the delivery: weight + Region </p>
+          <p class="line3">*special delivery less than two days +5$</p>
+        </div>
+
 </body>
 </html>
