--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="aboutStyle.css" />
 </head>
 <body>
-    
+  <h1 class="h1">About Us</h1>  
+  <p class="white">Express Delivery Company is a leading local provider of food supplies, clothes and shoes.
+    Established in February 2015 as an express operator in Nazareth city only, the company rapidly evolved into a local brand recognized for its customized services and innovative multi-product offering. 
+    After two years of successful trading, we managed to open a new company branch at Haifa to deliver to all areas in north district.
+    Today we have 4 branches in Nazareth, Haifa, Tel – Aviv and Beer – Sheba so we deliver to all areas in land and the company employs 100 employees.  
+    </p>
+    <h3 class="h1">Management Team:</h3>
+    <h5 class=white>Mr.Alaa Lathqani - Manager of the company :</h5>
+    <p class="white"></p>
+    <h5 class="white">Mrs.Haneen Awad - Packaging official manager :</h5>
+    <p class="white">Mrs.Haneen Awad was born (1996) and raised in Nazareth, Israel. She holds a B.A. Degree in engagment from Tel-Aviv university.  In 2015 together with Mr. Alaa founded Express Delivary Company. Ms. Awad' visionary leadership played an integral role in Alpha Omega's success.She is 
+        responsible for all ×finance functions× at the company.  Mrs.Awad is a responsible, honest, persistent and successful person.</p>
+        <h5 class="white">Mrs.Bushra shwiki - Delivery manager :</h5>
+        <p class="white"></p>
 </body>
 </html>
