--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,23 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="aboutStyle.css" />
+    <title>About</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/aboutStyle.css">
+    <link rel="icon" href="pic/icon.png" />
 </head>
 <body>
-  <h1 class="h1">About Us</h1>  
-  <p class="white">Express Delivery Company is a leading local provider of food supplies, clothes and shoes.
+
+  <header>
+    <ol>
+        <li> <a href="index.html"> <img src="pic/logo.png" alt="logo" width="400px"></a></li>
+        <li class="info"> <img src="pic/addressIcon.png" width="15px" height="15px"> | Nazareth, Tel-Aviv </li>
+        <li class="info"> <img src="pic/callIcon.png" width="15px" height="15px"> | +972 52 968 3903</li>
+        <li class="info"> <img src="pic/emailIcon.png" width="15px" height="15px"> | info@expressdelivery.com</li>
+    </ol>
+</header>
+
+<img src="pic/hdr.PNG" width="800px" alt="header" id="imgHdr">
+
+<nav>
+    <ul>
+        <li><a href="index.html"> HOME </a></li>
+        <li><a href="services.html"> SERVICES </a></li>
+        <li><a href="aboutUs.html"> ABOUT US</a></li>
+        <li><a href="contact.html"> CONTACT </a></li>
+    </ul>
+</nav>
+<br><hr width="800px">
+
+<div style="width: 800px; margin-left: auto; margin-right: auto;">
+  <h1><u>About Us</u></h1>  
+  <p class="about">Express Delivery Company is a leading local provider of food supplies, clothes and shoes.
     Established in February 2015 as an express operator in Nazareth city only, the company rapidly evolved into a local brand recognized for its customized services and innovative multi-product offering. 
     After two years of successful trading, we managed to open a new company branch at Haifa to deliver to all areas in north district.
     Today we have 4 branches in Nazareth, Haifa, Tel – Aviv and Beer – Sheba so we deliver to all areas in land and the company employs 100 employees.  
-    </p>
-    <h3 class="h1">Management Team:</h3>
-    <h5 class=white>Mr.Alaa Lathqani - Manager of the company :</h5>
-    <p class="white"></p>
-    <h5 class="white">Mrs.Haneen Awad - Packaging official manager :</h5>
-    <p class="white">Mrs.Haneen Awad was born (1996) and raised in Nazareth, Israel. She holds a B.A. Degree in engagment from Tel-Aviv university.  In 2015 together with Mr. Alaa founded Express Delivary Company. Ms. Awad' visionary leadership played an integral role in Alpha Omega's success.She is 
+ </p>
+
+
+    <h1>Management Team:</h1>
+    <h5>Mr.Alaa Lathqani - Manager of the company :</h5>
+    <p class="about">The founder of Express Delivery company
+      Certified software engineer with a B.Sc in applied mathematics. Passionate about working with numbers and developing code for apps and features to provide smart solutions and increase efficiency for clients. Detail oriented, hard working and enthusiastic about solving complex challenges.
+      </p>
+      <hr>
+    <h5>Mrs.Haneen Awad - Packaging official manager :</h5>
+    <p class="about">Mrs.Haneen Awad was born (1996) and raised in Nazareth, Israel. She holds a B.A. Degree in engagment from Tel-Aviv university.  In 2015 together with Mr. Alaa founded Express Delivary Company. Ms. Awad' visionary leadership played an integral role in Alpha Omega's success.She is 
         responsible for all ×finance functions× at the company.  Mrs.Awad is a responsible, honest, persistent and successful person.</p>
-        <h5 class="white">Mrs.Bushra shwiki - Delivery manager :</h5>
-        <p class="white"></p>
+        <hr>
+        <h5>Mrs.Bushra shwiki - Delivery manager :</h5>
+        <p class="about">Bushra Shwiki born (1998) and raised in Jerusalem, Israel. She holds a B.A. Degree in management from Haifa university. 
+          In 2015 together with Mr. Alaa and Mrs. Haneen founded Express Delivary Company. Ms. Awad' visionary leadership played an integral role in Alpha Omega's success.She is responsible for all Drivers and Vehicles comes to and out at the company. 
+          and she managing everything with honesty, persistenty and successfully.</p>
+</div>
+
+<footer>
+  <p>&copy; Copyright 2020, Express Delivery Company</p>
+</footer> 
 </body>
 </html>
