--- a/services.html
+++ b/services.html
@@ -4,23 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="servicesStyle.css" />
+    <link rel="stylesheet" href="css/servicesStyle.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="pic/icon.png" />
 </head>
 <body class="body">
-<h1 class="services">EXPRESS DELIVARY COMPANY SERVICES</h1><br><br>
 
-<ul class="container" style="list-style-type: none">
-  <li><img  src="cc.jpg" alt="Delivary" ></li>
-  <li><h2 class="h2"> You deserve a great delivery experience!<br> You want your favorite products delivered to you fast, with safe shipping and no hassles.
-  </h2></li>
-</ul>
+  <header>
+    <ol>
+        <li> <a href="index.html"> <img src="pic/logo.png" alt="logo" width="400px"></a></li>
+        <li class="info"> <img src="pic/addressIcon.png" width="15px" height="15px"> | Nazareth, Tel-Aviv </li>
+        <li class="info"> <img src="pic/callIcon.png" width="15px" height="15px"> | +972 52 968 3903</li>
+        <li class="info"> <img src="pic/emailIcon.png" width="15px" height="15px"> | info@expressdelivery.com</li>
+    </ol>
+</header>
 
-<p class="p">We help you take your order in the easiest way. Whether we’re delivering your meal kits to help you quickly prepare dinner, 
+<img src="pic/hdr.PNG" width="800px" alt="header" id="imgHdr">
+
+<nav>
+    <ul>
+        <li><a href="index.html"> HOME </a></li>
+        <li><a href="services.html"> SERVICES </a></li>
+        <li><a href="aboutUs.html"> ABOUT US</a></li>
+        <li><a href="contact.html"> CONTACT </a></li>
+    </ul>
+</nav>
+<br><hr width="800px">
+
+
+<h1 class="services">EXPRESS DELIVARY COMPANY SERVICES</h1><br>
+<table class="topPage">
+  <tr>
+    <td><img  src="cc.jpg" alt="Delivary" width="400px"></td>
+    <td><h2> You deserve a great delivery experience!<br> You want your favorite products delivered to you fast, with safe shipping and no hassles.
+    </h2></td>
+  </tr>
+</table>
+
+<p class="para">We help you take your order in the easiest way. Whether we’re delivering your meal kits to help you quickly prepare dinner, 
   or helping you avoid a last-minute trip to the store,
    our goal is to give you more time for what’s important by delivering your favorite products to you — fast.<br></p>
 <p class="titlePrice">The price of delivary</p>
  <div class="container">
- <table class="table1" border="1">
+ <table class="table1" border="1" style="color: white;">
         <tr>
           <th class="th">Weight of package<br>(inclusive)</th>
           <th>Price</th>
@@ -69,8 +95,8 @@
             <td>100+ kg</td>
             <td>165$</td>
           </tr>      
-      </table> 
-      <table class="table2" border="1" >
+      </table> <br>
+      <table class="table2" border="1" style="color: white;">
         <tr>
           <th>Region</th>
           <th>Price</th>
@@ -95,6 +121,10 @@
           <p class="line2">Total price of the delivery: weight + Region </p>
           <p class="line3">*special delivery less than two days +5$</p>
         </div>
+
+        <footer>
+          <p>&copy; Copyright 2020, Express Delivery Company</p>
+      </footer> 
 
 </body>
 </html>
