--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
 <h1 class="services">EXPRESS DELIVARY COMPANY SERVICES</h1><br>
 <table class="topPage">
   <tr>
-    <td><img  src="cc.jpg" alt="Delivary" width="400px"></td>
+    <td><img  src="pic/cc.jpg" alt="Delivary" width="400px"></td>
     <td><h2> You deserve a great delivery experience!<br> You want your favorite products delivered to you fast, with safe shipping and no hassles.
     </h2></td>
   </tr>
